feat(glos): updated docs in creates

--- a/glos-core/docs/схема_проекта.md
+++ b/glos-core/docs/схема_проекта.md
@@ -4,19 +4,19 @@
 glos-core
 ├── docs
 │   └── схема_проекта.md
-├── examples/
+├── examples
 │   ├── write_glos_file.rs
 │   └── read_glos_file.rs
-├── src/
+├── src
 │   ├── error.rs
 │   ├── format.rs
 │   ├── lib.rs
 │   └── serialization.rs
-├── tests/
+├── tests
 │   └── integration_tests.rs
 ├── .gitignore
 ├── Cargo.toml
+├── LICENSE
 ├── Makefile
-├── README.md
-└── test_output.glos
+└── README.md
 ```
