feat(glos-core): added a basic replay implementation to glos-core

--- a/glos-core/docs/схема_проекта.md
+++ b/glos-core/docs/схема_проекта.md
@@ -3,7 +3,7 @@
 ```
 glos-core
 ├── docs
-│   └── схема_проекта.md
+│   └── roadmap.md
 ├── examples
 │   ├── write_glos_file.rs
 │   └── read_glos_file.rs
