feat(glos-replayer): added a basic replay implementation to glos-replayer

--- a/glos-core/docs/схема_проекта.md
+++ b/glos-core/docs/схема_проекта.md
@@ -8,7 +8,10 @@ glos-core
 │   ├── write_glos_file.rs
 │   └── read_glos_file.rs
 ├── src
-│   ├── error.rs
+│   ├── binary
+│   │   ├── mod.rs
+│   │   ├── read.rs
+│   │   └── write.rs
 │   ├── format.rs
 │   ├── lib.rs
 │   └── serialization.rs
