--- a/glos-types/docs/схема_проекта.md
+++ b/glos-types/docs/схема_проекта.md
@@ -1,18 +1,18 @@
 ## Структура библиотеки
 
 ```
-glos-replayer
+glos-types
 ├── docs
-│   ├── roadmap.md
 │   └── схема_проекта.md
 ├── src
-│   ├── config.rs
+│   ├── compression.rs
 │   ├── error.rs
+│   ├── header.rs
+│   ├── iq_block.rs
+│   ├── iq_format.rs
 │   ├── lib.rs
-│   ├── main.rs
-│   └── session.rs
+│   └── sdr.rs
 ├── tests
-│   └── integration_tests.rs
 ├── .gitignore
 ├── Cargo.toml
 ├── LICENSE
